--- a/mac.yml
+++ b/mac.yml
@@ -76,7 +76,7 @@
     - { role: transmission, tags: ["transmission","stage_4"] }
     - { brew_pkg_name: "bfg", tags: ["bfg","stage_4"], role: brew_pkg }
     - { brew_pkg_name: "tree", tags: ["tree","stage_4"], role: brew_pkg }
-    - { cask_app_name: "istat-menus", role: danbohea.cask-app, tags: ["istat_menus","stage_4"] }
+    - { cask_app_name: "istat-menus", role: danbohea.cask-app, tags: ["istat_menus","stage_4","no_ci"] }
     - { cask_app_name: "firefox", tags: ["firefox","stage_4"], role: danbohea.cask-app }
     - { cask_app_name: "opera", tags: ["opera","stage_4"], role: danbohea.cask-app }
     # - { cask_app_name: "opera-mobile-emulator", tags: ["opera_mobile_emulator","stage_4"], role: danbohea.cask-app }
