--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,5 @@ script:
   - ansible-playbook mac.yml --syntax-check
   # Run Ansible playbook:
   # - Skip tasks/roles that we know cause issues in Travis
-  - ansible-playbook mac.yml --skip-tags "no_ci"
+  # - Skip stage 3/4/5 roles as they don't *really* add much to the test
+  - ansible-playbook mac.yml --skip-tags "no_ci,stage_3,stage_4,stage_5"
