Test use of osx_defaults type string

--- a/roles/osx/tasks/activity_monitor.yml
+++ b/roles/osx/tasks/activity_monitor.yml
@@ -19,12 +19,12 @@
     - killall
 
 - name: Sort Activity Monitor results by CPU usage (1)
-  command: defaults write com.apple.ActivityMonitor SortColumn -string "CPUUsage"
-  # osx_defaults:
-  #   domain: com.apple.ActivityMonitor
-  #   key: SortColumn
-  #   type: string
-  #   value: "CPUUsage"
+  # command: defaults write com.apple.ActivityMonitor SortColumn -string "CPUUsage"
+  osx_defaults:
+    domain: com.apple.ActivityMonitor
+    key: SortColumn
+    type: string
+    value: "CPUUsage"
   notify:
     - killall
 
