Added Terminal.app to dock

--- a/config.yml
+++ b/config.yml
@@ -24,6 +24,7 @@ dock_apps:
   - Sequel Pro.app
   - Parallels Desktop.app
   - VirtualBox.app
+  - Terminal.app
 
 # projects
 # ------------------------------------------------------------------------------
