--- a/roles/macos/tasks/general_ui_ux.yml
+++ b/roles/macos/tasks/general_ui_ux.yml
@@ -11,7 +11,10 @@
     - killall
 
 - name: Minimize window when double-clicking its title bar
-  command: defaults write NSGlobalDomain AppleActionOnDoubleClick -string "Minimize"
+  osx_defaults:
+  key: AppleActionOnDoubleClick
+  type: string
+  value: "Minimize"
   notify:
     - killall
 
