Hopefully corrected array syntax error

--- a/roles/evernote/tasks/main.yml
+++ b/roles/evernote/tasks/main.yml
@@ -10,6 +10,6 @@
     domain: com.evernote.Evernote
     key: ENEnabledBetaFeatures
     type: array
-    value: "CodeBlock"
+    value: ["CodeBlock"]
   notify:
     - killall Evernote
