Adding atext via cask-app role

--- a/mac.yml
+++ b/mac.yml
@@ -23,7 +23,7 @@
     - { role: danbohea.spelling, tags: ["spelling","prep"] }
     - { brew_pkg_name: "lastpass-cli", brew_install_options: "with-pinentry", tags: ["lastpass_cli","prep"], role: brew_pkg }
     - { cask_app_name: "dropbox", tags: ["dropbox","prep"], role: danbohea.cask-app }
-    - { role: atext, tags: ["atext","prep"] }
+    - { cask_app_name: "atext", tags: ["atext","prep"], role: danbohea.cask-app }
     - { role: atom, tags: ["atom","prep"] }
     - { role: quick_look_plugins, tags: ["quick_look_plugins","prep"] }
     - { cask_app_name: "bettertouchtool", tags: ["bettertouchtool","prep"], role: danbohea.cask-app }
