Removed projects role.

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,5 +27,5 @@ script:
   # - ansible-playbook mac.yml -t "evernote"
   # Run Ansible playbook:
   # - Skip tasks/roles that we know cause issues in Travis
-  # - Skip stage 3/4/5 roles as they don't *really* add much to the test
-  - ansible-playbook mac.yml --skip-tags "no_ci,stage_3,stage_4,stage_5"
+  # - Skip stage 3/4 roles as they don't *really* add much to the test
+  - ansible-playbook mac.yml --skip-tags "no_ci,stage_3,stage_4"
