--- a/roles/terminal/tasks/main.yml
+++ b/roles/terminal/tasks/main.yml
@@ -32,5 +32,6 @@
 
 # We can't restart Terminal via a handler as it will kill the playbook run
 # prematurely. Let's just remind the user to instead.
+# TODO: Let's not presume this. Add condition to handler to help decide.
 - debug:
     msg: "Please restart Terminal.app to see any change in preferences."
