rbenv role now in external repo

--- a/requirements.yml
+++ b/requirements.yml
@@ -25,3 +25,6 @@
 
 - src: https://github.com/danbohea/ansible-role-dock-items.git
   name: danbohea.dock-items
+
+- src: https://github.com/danbohea/ansible-role-rbenv.git
+  name: danbohea.rbenv
