--- a/requirements.yml
+++ b/requirements.yml
@@ -1,30 +1,11 @@
 ---
 
-# TODO: Using repo address as src to avoid "name must be a byte string" error in Ansible 2.1.0.0
-
-- src: https://github.com/danbohea/ansible-role-cask-app
-  name: danbohea.cask-app
-
-- src: https://github.com/danbohea/ansible-role-homebrew
-  name: danbohea.homebrew
-
-- src: https://github.com/danbohea/ansible-role-flux
-  name: danbohea.flux
-
-- src: https://github.com/danbohea/ansible-role-google-chrome
-  name: danbohea.google-chrome
-
-- src: https://github.com/danbohea/ansible-role-sketch
-  name: danbohea.sketch
-
-- src: https://github.com/danbohea/ansible-role-skype
-  name: danbohea.skype
-
-- src: https://github.com/danbohea/ansible-role-spelling
-  name: danbohea.spelling
-
-- src: https://github.com/danbohea/ansible-role-dock-items.git
-  name: danbohea.dock-items
-
-- src: https://github.com/danbohea/ansible-role-rbenv.git
-  name: danbohea.rbenv
+- src: danbohea.cask-app
+- src: danbohea.dock-items
+- src: danbohea.flux
+- src: danbohea.google-chrome
+- src: danbohea.homebrew
+- src: danbohea.rbenv
+- src: danbohea.sketch
+- src: danbohea.skype
+- src: danbohea.spelling
