Forcing `version: master` for chrome role (Galaxy keeps trying to download 1.0.0)

--- a/requirements.yml
+++ b/requirements.yml
@@ -4,6 +4,7 @@
 - src: danbohea.dock-items
 - src: danbohea.flux
 - src: danbohea.google-chrome
+  version: master
 - src: danbohea.homebrew
 - src: danbohea.rbenv
 - src: danbohea.sketch
