Specified versions for all required roles

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,12 +1,20 @@
 ---
 
 - src: danbohea.cask-app
+  version: master
 - src: danbohea.dock-items
+  version: master
 - src: danbohea.flux
+  version: master
 - src: danbohea.google-chrome
   version: master
 - src: danbohea.homebrew
+  version: master
 - src: danbohea.rbenv
+  version: master
 - src: danbohea.sketch
+  version: master
 - src: danbohea.skype
+  version: master
 - src: danbohea.spelling
+  version: master
