--- a/mac.yml
+++ b/mac.yml
@@ -77,7 +77,7 @@
     # --------------------------------------------------------------------------
 
     - { role: transmission, tags: ["transmission","stage_4"] }
-    - { brew_pkg_name: "bfg", tags: ["bfg","stage_4"], role: brew_pkg }
+    # - { brew_pkg_name: "bfg", tags: ["bfg","stage_4"], role: brew_pkg }
     - { brew_pkg_name: "tree", tags: ["tree","stage_4"], role: brew_pkg }
     - { brew_pkg_name: "wget", tags: ["wget","stage_4"], role: brew_pkg }
     - { brew_pkg_name: "android-platform-tools", tags: ["android_platform_tools","stage_4"], role: brew_pkg }
