--- a/roles/login_items/defaults/main.yml
+++ b/roles/login_items/defaults/main.yml
@@ -4,6 +4,7 @@
 login_items_apps:
   - Alfred 3.app
   - aText.app
+  - Bartender 2.app
   - BetterTouchTool.app
   - CrasPlan menu bar.app
   - Dropbox.app
