--- a/roles/path_finder/tasks/main.yml
+++ b/roles/path_finder/tasks/main.yml
@@ -3,3 +3,75 @@
 - name: Install Path Finder
   homebrew_cask: name=path-finder state=present
   notify: brew cask cleanup
+
+- name: Set Path Finder to be the default file viewer
+  osx_defaults:
+    domain: com.cocoatech.PathFinder
+    key: pathFinderIsDefaultFileViewer
+    type: int
+    value: 1
+  notify:
+    - killall Path Finder
+
+- name: Don't open TextEdit documents in Path Finder
+  osx_defaults:
+    domain: com.cocoatech.PathFinder
+    key: kOpenTextEditDocumentsInTextEditor
+    type: int
+    value: 0
+  notify:
+    - killall Path Finder
+
+- name: Set Terminal.app as the default terminal
+  osx_defaults:
+    domain: com.cocoatech.PathFinder
+    key: kTerminalApplicationPath
+    type: string
+    value: "/Applications/Utilities/Terminal.app"
+  notify:
+    - killall Path Finder
+
+- name: Set Atom.app as the default text editor
+  osx_defaults:
+    domain: com.cocoatech.PathFinder
+    key: textEditorApplicationPath
+    type: string
+    value: "/Applications/Atom.app"
+  notify:
+    - killall Path Finder
+
+- name: 'Set "Reveal in Path Finder" to "Reveal in new tab"'
+  osx_defaults:
+    domain: com.cocoatech.PathFinder
+    key: kRevealInPathFinderBehaviorPrefKey
+    type: int
+    value: 2
+  notify:
+    - killall Path Finder
+
+- name: Open new windows and tabs in Column view
+  osx_defaults:
+    domain: com.cocoatech.PathFinder
+    key: kNTNewWindowsViewType
+    type: int
+    value: 4
+  notify:
+    - killall Path Finder
+
+- name: "Set starting directory to ~/Projects"
+  osx_defaults:
+    domain: com.cocoatech.PathFinder
+    key: kNTDefaultTabPath
+    type: string
+    value: "/Users/danbohea/Projects"
+  notify:
+    - killall Path Finder
+
+- name: Command clicking folders opens them in a new tab
+  osx_defaults:
+    domain: com.cocoatech.PathFinder
+    key: kCommandClickOpenBehavior
+    type: int
+    value: 1
+  notify:
+    - killall Path Finder
