--- a/roles/macos/tasks/finder.yml
+++ b/roles/macos/tasks/finder.yml
@@ -25,10 +25,10 @@
     type: bool
     value: true
   with_items:
-    - { name: 'Show icons for hard drives, servers, and removable media on the desktop', key: 'ShowExternalHardDrivesOnDesktop'}
-    - { name: 'Show icons for hard drives, servers, and removable media on the desktop', key: 'ShowHardDrivesOnDesktop'}
-    - { name: 'Show icons for hard drives, servers, and removable media on the desktop', key: 'ShowMountedServersOnDesktop'}
-    - { name: 'Show icons for hard drives, servers, and removable media on the desktop', key: 'ShowRemovableMediaOnDesktop'}
+    - { name: 'Show external hard drives on the desktop', key: 'ShowExternalHardDrivesOnDesktop'}
+    - { name: 'Show internal hard drives on the desktop', key: 'ShowHardDrivesOnDesktop'}
+    - { name: 'Show mounted servers on the desktop', key: 'ShowMountedServersOnDesktop'}
+    - { name: 'Show removable media on the desktop', key: 'ShowRemovableMediaOnDesktop'}
     - { name: 'Show hidden files by default', key: 'AppleShowAllFiles'}
     - { name: 'Show status bar', key: 'ShowStatusBar'}
     - { name: 'Show path bar', key: 'ShowPathbar'}
