--- a/mac.yml
+++ b/mac.yml
@@ -68,6 +68,7 @@
     - { cask_app_name: "phpstorm", tags: ["phpstorm","stage_2"], role: danbohea.cask-app }
     - { cask_app_name: "slack", tags: ["slack","stage_2"], role: danbohea.cask-app }
     - { role: bash_completion, tags: ["bash_completion","stage_2"] }
+    - { cask_app_name: "toggldesktop", tags: ["toggldesktop","stage_2"], role: danbohea.cask-app }
 
     # Stage 3: Projects
     # --------------------------------------------------------------------------
