Added docker & kitematic

--- a/mac.yml
+++ b/mac.yml
@@ -69,6 +69,8 @@
     - { cask_app_name: "slack", tags: ["slack","stage_2"], role: danbohea.cask-app }
     - { role: bash_completion, tags: ["bash_completion","stage_2"] }
     - { cask_app_name: "toggldesktop", tags: ["toggldesktop","stage_2"], role: danbohea.cask-app }
+    - { cask_app_name: "docker", tags: ["docker","stage_2"], role: danbohea.cask-app }
+    - { cask_app_name: "kitematic", tags: ["kitematic","stage_2"], role: danbohea.cask-app }
 
     # Stage 3: Projects
     # --------------------------------------------------------------------------
