Swapped Wunderlist for Todoist in dock

--- a/config.yml
+++ b/config.yml
@@ -16,7 +16,7 @@ dock_apps:
   - Calendar.app
   - PhpStorm.app
   - Atom.app
-  - Wunderlist.app
+  - Todoist.app
   - System Preferences.app
   - xScope.app
   - Tower.app
