Commented out vagrant-hostsupdater (install currently failing)

--- a/roles/vagrant/defaults/main.yml
+++ b/roles/vagrant/defaults/main.yml
@@ -2,6 +2,7 @@
 
 vagrant_plugins:
   - vagrant-cachier
-  - vagrant-hostsupdater
+  # TODO: Commented out as install is currently failing.
+  # - vagrant-hostsupdater
   - vagrant-parallels
   - vagrant-triggers
