--- a/roles/atom/defaults/main.yml
+++ b/roles/atom/defaults/main.yml
@@ -31,6 +31,7 @@ atom_packages:
   - project-manager
   - sort-lines
   - svg-preview
+  - tabs-to-spaces
   - todo-manager
   - travis-ci-status
   - tree-view-autoresize
