Added vagrant-auto_network & vagrant-vbguest plugins

--- a/roles/vagrant/defaults/main.yml
+++ b/roles/vagrant/defaults/main.yml
@@ -1,8 +1,10 @@
 ---
 
 vagrant_plugins:
+  - vagrant-auto_network
   - vagrant-cachier
   # TODO: Commented out as install is currently failing.
   # - vagrant-hostsupdater
   # - vagrant-parallels
   - vagrant-triggers
+  - vagrant-vbguest
