--- a/roles/atom/defaults/main.yml
+++ b/roles/atom/defaults/main.yml
@@ -23,6 +23,7 @@ atom_packages:
   - language-docker
   - language-patch
   - linter
+  - linter-ansible-syntax
   - linter-manager
   - markdown-writer
   - open-terminal-here
