--- a/roles/atom/defaults/main.yml
+++ b/roles/atom/defaults/main.yml
@@ -5,6 +5,7 @@ atom_upgrade_packages: false
 atom_packages:
   - afterglow-monokai-syntax
   - atom-beautify
+  - atom-jinja2
   - autoclose-html
   - autocomplete-plus
   - bottom-dock
