--- a/roles/terminal/tasks/main.yml
+++ b/roles/terminal/tasks/main.yml
@@ -16,7 +16,7 @@
 - name: Ensure custom Terminal profile is added.
   shell: open {{ terminal_profile_file }}
   changed_when: false
-  when: "'{{ terminal_profile_name }}' not in terminal_profile.stdout"
+  when: terminal_profile_name not in terminal_profile.stdout
 
 - name: Ensure custom Terminal profile is set as default.
   osx_defaults:
@@ -28,7 +28,7 @@
     - Default Window Settings
     - Startup Window Settings
   changed_when: false
-  when: "'{{ terminal_profile_name }}' not in terminal_profile.stdout"
+  when: terminal_profile_name not in terminal_profile.stdout
 
 # We can't restart Terminal via a handler as it will kill the playbook run
 # prematurely. Let's just remind the user to instead.
