login_items: Now searches for .app filenames an additional further level down from /Applications
Borrowed from https://github.com/danbohea/ansible-role-dock-items/blob/5079aba385b3b67c92b1430fe22c39297c497bdb/tasks/main.yml#L3-L10

--- a/roles/login_items/tasks/main.yml
+++ b/roles/login_items/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 
-# Command uses `basename` to return only filenames (excludes paths)
-# Source: http://superuser.com/a/620591
+# Shell command returns only filenames (excluding paths) from within
+# /Applications or one further level down.
 - name: Get list of .app files in /Applications
-  command: find . -depth 1 -name "*.app" -exec basename {} \;
+  shell: find . -name '*.app' -maxdepth 2 | sed 's/^\.\///'
   args:
     chdir: /Applications
   register: installed_apps
