--- a/mac.yml
+++ b/mac.yml
@@ -60,7 +60,7 @@
     - { cask_app_name: "the-unarchiver", tags: ["the_unarchiver","stage_1"], role: danbohea.cask-app }
     - { cask_app_name: "keyboard-maestro", tags: ["keyboard_maestro","stage_1"], role: danbohea.cask-app }
     - { role: danbohea.skype, tags: ["skype","stage_1","no_ci"] }
-    # TODO: Add Muzzle https://muzzleapp.com (no Cask app as yet)
+    - { cask_app_name: "muzzle", tags: ["muzzle","stage_1"], role: danbohea.cask-app }
 
     # Stage 2: Essential dev
     # --------------------------------------------------------------------------
