Tidy up composer role

--- a/roles/composer/tasks/main.yml
+++ b/roles/composer/tasks/main.yml
@@ -1,30 +1,26 @@
 ---
 
-# Tasks borrowed from https://github.com/andyceo/ansible-role-composer
-
 # http://getcomposer.org
 # http://getcomposer.org/doc/00-intro.md#installation-nix
 #
-#   curl -sS https://getcomposer.org/installer | php
-#   sudo mv composer.phar /usr/local/bin/composer
+# curl -sS https://getcomposer.org/installer | php
+# sudo mv composer.phar /usr/local/bin/composer
 
 - name: Download composer to /tmp
-  shell:
-    curl -sS https://getcomposer.org/installer | php
-    creates='/usr/local/bin/composer'
-    chdir='/tmp'
+  shell: curl -sS https://getcomposer.org/installer | php
   args:
+    chdir: '/tmp'
+    creates: '/tmp/composer.phar'
     warn: false
   become: true
 
 - name: Move composer to /usr/local/bin (global installation)
-  command:
-    mv composer.phar /usr/local/bin/composer
-    creates='/usr/local/bin/composer'
-    chdir='/tmp'
+  command: mv composer.phar /usr/local/bin/composer
+  args:
+    chdir: '/tmp'
+    creates: '/usr/local/bin/composer'
   become: true
 
 - name: Update composer
-  command:
-    composer self-update
+  command: composer self-update
   become: true
