Added to list of Quick Look plugins

--- a/roles/quick_look_plugins/defaults/main.yml
+++ b/roles/quick_look_plugins/defaults/main.yml
@@ -4,8 +4,10 @@ quick_look_plugins_list:
   - betterzipql
   - qlcolorcode
   - qlmarkdown
+  - qlmobi
   - qlprettypatch
   - qlstephen
+  - quicklookase
   - quicklook-csv
   - quicklook-json
   - suspicious-package
