Make use of ansible_env.HOME

--- a/roles/transmission/tasks/main.yml
+++ b/roles/transmission/tasks/main.yml
@@ -6,7 +6,7 @@
 
 - name: Ensure location for incomplete downloads exists
   file:
-    path: /Users/{{ ansible_env.USER }}/Downloads/Torrents/Incomplete
+    path: {{ ansible_env.HOME }}/Downloads/Torrents/Incomplete
     state: directory
     follow: yes
 
