--- a/roles/atom/tasks/main.yml
+++ b/roles/atom/tasks/main.yml
@@ -7,13 +7,13 @@
 - name: Ensure Atom packages are installed
   command: apm install {{ item }}
   args:
-    creates: /Users/{{ ansible_env.USER }}/.atom/packages/{{ item }}
+    creates: {{ ansible_env.HOME }}/.atom/packages/{{ item }}
   with_items: "{{ atom_packages }}"
 
 - name: Copy Atom config into place.
   copy:
     src: config.cson
-    dest: /Users/{{ ansible_env.USER }}/.atom/config.cson
+    dest: {{ ansible_env.HOME }}/.atom/config.cson
     mode: 0644
 
 - name: Upgrade Atom packages
