--- a/roles/time_machine/defaults/main.yml
+++ b/roles/time_machine/defaults/main.yml
@@ -7,4 +7,4 @@ time_machine_ex_dir_name: TM_Excluded
 #   - /Volumes/Data/{{ time_machine_ex_dir_name }}
 
 # time_machine_exclusions_laptop:
-#   - {{ ansible_env.HOME }}/{{ time_machine_ex_dir_name }}
+#   - "{{ ansible_env.HOME }}"/{{ time_machine_ex_dir_name }}
